[gd_scene load_steps=2 format=3 uid="uid://bv4rsplutn86b"]

[ext_resource type="Script" path="res://scenes/server_roster.gd" id="1_r0i4t"]

[node name="ServerRoster" type="Node2D"]
script = ExtResource("1_r0i4t")

[node name="BackToMenu" type="Button" parent="."]
offset_left = 85.0
offset_top = 32.0
offset_right = 357.0
offset_bottom = 95.0
text = "Back to Menu
"

[node name="ClientDisconnect" type="Button" parent="."]
offset_left = 85.0
offset_top = 573.0
offset_right = 652.0
offset_bottom = 636.0
text = "Disconnect from Server"

[node name="ServerDisconnect" type="Button" parent="."]
visible = false
offset_left = 85.0
offset_top = 573.0
offset_right = 652.0
offset_bottom = 636.0
text = "Close the Server"

[node name="Label" type="Label" parent="."]
offset_left = 13.0
offset_top = 116.0
offset_right = 1138.0
offset_bottom = 536.0
autowrap_mode = 2

[node name="Label2" type="Label" parent="."]
offset_left = 500.0
offset_top = 23.0
offset_right = 704.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 26
text = "Server Roster"
vertical_alignment = 1

[connection signal="pressed" from="BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="ClientDisconnect" to="." method="_on_client_disconnect_pressed"]
[connection signal="pressed" from="ServerDisconnect" to="." method="_on_server_disconnect_pressed"]
